Brain/Assets/Game/Scripts/YZUtils/BridgeNative/BridgeiOS/NativeiOS.h

//
//  NativeiOS.h
//  Unity-iPhone
//
//  Created by yz on 2019/12/31.
//

#import <Foundation/Foundation.h>


char * getLocaleCountryCode(void);
bool getiOSDebug(void);
float getBrightness(void);
void setBrightness(float value);